# locatile

./: Makefile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  locatile.c  main-xyz.c  main.c  osm.c  osm.h
src/: locatile.c  locatile.h  main.c
